2013-06-16 Valentin Dudouyt <valentin dudouyt AT gmail.com>

	* src/stm8/main.c,
	* src/stm8/peep.c: implemented stm8canAssign and stm8notUsed,
	  fixed handling of label entities in stm8instructionSize,
	  added internal buffer in nextToken.
	* src/stm8/peeph.def: uncommented a few peephole rules.

2013-06-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_mullonglong.c,
	* sdas/as8051/i51adr.c,
	* sdas/linksrc/lkbank.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lkrloc.c,
	* sdas/linksrc/aslink.h,
	* src/mcs51/main.c: cosmetic changes
	* sdas/asxxsrc/asmain.c (main): default to 16 bit address width
	* sdas/as8051/i51mch.c (minit): set address width to 24 bit
	* sdas/as8xcxxx/ds8mch.c (machine): validate address width
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asxxxx.h: added a_bytes, a_mask, s_mask, v_mask and outradix
	* sdas/asxxsrc/asexpr.c (exprmasks): set a_bytes and masks
	* sdas/asxxsrc/aslist.c: use a_bytes
	* sdas/asxxsrc/asout.c: use a_bytes,
	  (outradix, outgsd): added to output address width
	* sdas/linksrc/lkarea.c,
	* sdas/linksrc/lklist.c: small optimizations
	* sdas/linksrc/lkrloc3.c (relr3): use a_bytes
	* support/sdbinutils/bfd/asxxxx.c (asxxxx_is_rel): fixed get_eol

2013-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lkaomf51.c (GetName, SaveLinkedFilePath): small optimization
	  (OutputAOEMF51, CollectInfoFromCDB, ReadHexFile): fixed bug 2184
	* sdas/linksrc/lkmain.c: cosmetics
	* sdas/linksrc/lkout.c (ixx, iflush): fixed bug 1986
	* sdas/linksrc/lksym.c: comments

2013-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/sdcc.vcxproj: removed boost library path
	* src/stm8/stm8.vcxproj,
	* src/stm8/stm8.vcxproj.filters: added peep.[ch]
	* src/z80/z80.vcxproj: fixed message typo
	* src/stm8/peep.c: fixed errors for MSVC (C89 compatible only):
	  only declarations at start of block
	* support/packihx/packihx.c: whitespace

2013-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def: